--- a/3/gradle.html
+++ b/3/gradle.html
@@ -477,7 +477,7 @@
                     <div class="figure">
                         <a name="N10172"></a>
                         <p class="title"><b>Figure&nbsp;4.1.&nbsp;Task dependencies</b></p>
-                        <div class="figure-contents"><img src="img/commandLineTutorialTasks.png" alt="Task dependencies"></div>
+                        <div class="figure-contents"><img src="https://docs.gradle.org/current/userguide/img/commandLineTutorialTasks.png" alt="Task dependencies"></div>
                     </div><br class="figure-break">
                     <div class="example">
                         <a name="multipleTasksFromCommandLine"></a>
@@ -1078,7 +1078,7 @@ buildFile: /home/user/gradle/samples/userguide/tutorial/projectReports/api/build
                         </p>
                         <table cellpadding="0" cellspacing="0" summary="manufactured viewport for HTML img" border="0" width="903">
                             <tr height="477">
-                                <td><img src="img/profile.png" height="477"></td>
+                                <td><img src="https://docs.gradle.org/current/userguide/img/profile.png" height="477"></td>
                             </tr>
                         </table>
                     </div>
@@ -2259,7 +2259,7 @@ For example, try running gradle :api:tasks
                     <div class="figure">
                         <a name="N108B8"></a>
                         <p class="title"><b>Figure&nbsp;9.1.&nbsp;Java plugin task graph</b></p>
-                        <div class="figure-contents"><img src="img/javaPluginTasks.png" alt="Java plugin task graph"></div>
+                        <div class="figure-contents"><img src="https://docs.gradle.org/current/userguide/img/javaPluginTasks.png" alt="Java plugin task graph"></div>
                     </div><br class="figure-break">
                     <p>
                         The following key tasks of the graph use files in the corresponding directories as inputs:
@@ -2881,7 +2881,7 @@ gradle --gui
                     <div class="figure-contents">
                         <table cellpadding="0" cellspacing="0" summary="manufactured viewport for HTML img" border="0" width="586">
                             <tr height="597">
-                                <td><img src="img/guiTaskTree.png" width="586" alt="GUI Task Tree"></td>
+                                <td><img src="https://docs.gradle.org/current/userguide/img/guiTaskTree.png" width="586" alt="GUI Task Tree"></td>
                             </tr>
                         </table>
                     </div>
@@ -2971,7 +2971,7 @@ gradle --gui
                         <div class="figure-contents">
                             <table cellpadding="0" cellspacing="0" summary="manufactured viewport for HTML img" border="0" width="586">
                                 <tr height="597">
-                                    <td><img src="img/guiSetup.png" width="586" alt="GUI Setup"></td>
+                                    <td><img src="https://docs.gradle.org/current/userguide/img/guiSetup.png" width="586" alt="GUI Setup"></td>
                                 </tr>
                             </table>
                         </div>
@@ -5753,7 +5753,7 @@ Total time: 1 secs
                             <div class="figure-contents">
                                 <table cellpadding="0" cellspacing="0" summary="manufactured viewport for HTML img" border="0" width="567">
                                     <tr>
-                                        <td><img src="img/taskInputsOutputs.png" width="567" alt="Example task inputs and outputs"></td>
+                                        <td><img src="https://docs.gradle.org/current/userguide/img/taskInputsOutputs.png" width="567" alt="Example task inputs and outputs"></td>
                                     </tr>
                                 </table>
                             </div>
@@ -13882,7 +13882,7 @@ publishing {
                                 Running <code class="literal">gradle publish</code> in the sample directory causes the following repo layouts to exist:
                             </p>
                             <p>
-                                <img src="img/pluginMarkers.png">
+                                <img src="https://docs.gradle.org/current/userguide/img/pluginMarkers.png">
                             </p>
                         </div>
                     </div>
@@ -21349,7 +21349,7 @@ artifacts {
                     <div class="figure">
                         <a name="N15BA6"></a>
                         <p class="title"><b>Figure&nbsp;47.1.&nbsp;Java plugin - tasks</b></p>
-                        <div class="figure-contents"><img src="img/javaPluginTasks.png" alt="Java plugin - tasks"></div>
+                        <div class="figure-contents"><img src="https://docs.gradle.org/current/userguide/img/javaPluginTasks.png" alt="Java plugin - tasks"></div>
                     </div><br class="figure-break"></div>
                 <div class="section">
                     <div class="titlepage">
@@ -21536,7 +21536,7 @@ artifacts {
                     <div class="figure">
                         <a name="N15CD9"></a>
                         <p class="title"><b>Figure&nbsp;47.2.&nbsp;Java plugin - dependency configurations</b></p>
-                        <div class="figure-contents"><img src="img/javaPluginConfigurations.png" alt="Java plugin - dependency configurations"></div>
+                        <div class="figure-contents"><img src="https://docs.gradle.org/current/userguide/img/javaPluginConfigurations.png" alt="Java plugin - dependency configurations"></div>
                     </div><br class="figure-break">
                     <p>For each source set you add to the project, the Java plugins adds the following dependency configurations:</p>
                     <div class="table">
@@ -23260,7 +23260,7 @@ tasks.withType(JavaExec) {
                     <div class="figure">
                         <a name="N1664B"></a>
                         <p class="title"><b>Figure&nbsp;49.1.&nbsp;War plugin - tasks</b></p>
-                        <div class="figure-contents"><img src="img/warPluginTasks.png" alt="War plugin - tasks"></div>
+                        <div class="figure-contents"><img src="https://docs.gradle.org/current/userguide/img/warPluginTasks.png" alt="War plugin - tasks"></div>
                     </div><br class="figure-break"></div>
                 <div class="section">
                     <div class="titlepage">
@@ -23811,7 +23811,7 @@ ear {
                     <div class="figure">
                         <a name="N168DC"></a>
                         <p class="title"><b>Figure&nbsp;51.1.&nbsp;Jetty plugin - tasks</b></p>
-                        <div class="figure-contents"><img src="img/jettyPluginTasks.png" alt="Jetty plugin - tasks"></div>
+                        <div class="figure-contents"><img src="https://docs.gradle.org/current/userguide/img/jettyPluginTasks.png" alt="Jetty plugin - tasks"></div>
                     </div><br class="figure-break"></div>
                 <div class="section">
                     <div class="titlepage">
@@ -24507,7 +24507,7 @@ dependencies {
                     <div class="figure">
                         <a name="N16C72"></a>
                         <p class="title"><b>Figure&nbsp;55.1.&nbsp;Groovy plugin - tasks</b></p>
-                        <div class="figure-contents"><img src="img/groovyPluginTasks.png" alt="Groovy plugin - tasks"></div>
+                        <div class="figure-contents"><img src="https://docs.gradle.org/current/userguide/img/groovyPluginTasks.png" alt="Groovy plugin - tasks"></div>
                     </div><br class="figure-break"></div>
                 <div class="section">
                     <div class="titlepage">
@@ -25088,7 +25088,7 @@ tasks.withType(JavaExec) {
                     <div class="figure">
                         <a name="N16FB9"></a>
                         <p class="title"><b>Figure&nbsp;56.1.&nbsp;Scala plugin - tasks</b></p>
-                        <div class="figure-contents"><img src="img/scalaPluginTasks.png" alt="Scala plugin - tasks"></div>
+                        <div class="figure-contents"><img src="https://docs.gradle.org/current/userguide/img/scalaPluginTasks.png" alt="Scala plugin - tasks"></div>
                     </div><br class="figure-break"></div>
                 <div class="section">
                     <div class="titlepage">
@@ -26827,7 +26827,7 @@ dependencies {
                     </div><br class="example-break">
                     <table cellpadding="0" cellspacing="0" summary="manufactured viewport for HTML img" border="0" width="903">
                         <tr height="277">
-                            <td><img src="img/jacocoHtmlReport.png" height="277"></td>
+                            <td><img src="https://docs.gradle.org/current/userguide/img/jacocoHtmlReport.png" height="277"></td>
                         </tr>
                     </table>
                 </div>
@@ -30985,7 +30985,7 @@ repositories {
                     <div class="figure">
                         <a name="N18BDC"></a>
                         <p class="title"><b>Figure&nbsp;71.1.&nbsp;Play plugin - software model</b></p>
-                        <div class="figure-contents"><img src="img/playPluginModel.png" alt="Play plugin - software model"></div>
+                        <div class="figure-contents"><img src="https://docs.gradle.org/current/userguide/img/playPluginModel.png" alt="Play plugin - software model"></div>
                     </div><br class="figure-break">
                     <div class="section">
                         <div class="titlepage">
@@ -32204,7 +32204,7 @@ Total time: 1 secs
                     <div class="figure">
                         <a name="N1918B"></a>
                         <p class="title"><b>Figure&nbsp;72.1.&nbsp;Dependent Components Example</b></p>
-                        <div class="figure-contents"><img src="img/nativeDependents.png" alt="Dependent Components Example"></div>
+                        <div class="figure-contents"><img src="https://docs.gradle.org/current/userguide/img/nativeDependents.png" alt="Dependent Components Example"></div>
                     </div>
                     <p><br class="figure-break">
                     </p>
